2008-03-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adele Peterson.

        - test for <rdar://problem/5805127> REGRESSION (r31116): Assertion failure (floatIndex < floats.size()) in RenderBlock::determineStartPosition() at digg.com

        * fast/dynamic/floating-to-positioned.html: Added.
        * platform/mac/fast/dynamic/floating-to-positioned-expected.checksum: Added.
        * platform/mac/fast/dynamic/floating-to-positioned-expected.png: Added.
        * platform/mac/fast/dynamic/floating-to-positioned-expected.txt: Added.

2008-03-17  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - test incremental relayout of blocks that contain floats

        * fast/repaint/line-flow-with-floats-1.html: Added.
        * fast/repaint/line-flow-with-floats-2.html: Added.
        * fast/repaint/line-flow-with-floats-3.html: Added.
        * fast/repaint/line-flow-with-floats-4.html: Added.
        * fast/repaint/line-flow-with-floats-5.html: Added.
        * fast/repaint/line-flow-with-floats-6.html: Added.
        * fast/repaint/line-flow-with-floats-7.html: Added.
        * fast/repaint/line-flow-with-floats-8.html: Added.
        * fast/repaint/line-flow-with-floats-9.html: Added.
        * fast/repaint/resources/line-flow-with-floats.html: Added.
        * fast/repaint/resources/line-flow-with-floats.js: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-1-expected.checksum: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-1-expected.png: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-1-expected.txt: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-2-expected.checksum: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-2-expected.png: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-2-expected.txt: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-3-expected.checksum: Added.